--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 
         @import url('https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap');
 
+        @import url('https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Rowdies:wght@300;400;700&display=swap');
+
         *{
             margin: 0px;
             padding: 0px;
+            text-decoration: none;
         }
 
         :root{
@@ -19,6 +22,7 @@
             --input: #cad5de;
             --button: #d1deba ;
             --font: "Roboto Flex", sans-serif;;
+            --font1: "Rowdies", serif;
         }
         body{
             display: flex;
@@ -41,6 +45,36 @@
             height: 500px;
             border-radius: 20px;
         }
+
+        h1{
+            margin: 20px;
+            color: var(--button);
+            font-family: var(--font1);
+        }
+
+        button{
+            width: 150px;
+            height: 100%;
+            padding: 10px;
+            border: none;
+            border-radius: 10px;
+            background-color: var(--button);
+            font-weight: 600;
+            transition: background-position 0.5s ease;
+            background-image: linear-gradient(to right, var(--button) 50%, var(--input) 50%);
+            background-size: 200% 100%;
+            background-position: left bottom;
+        }
+
+        button:hover{
+            background-position: right bottom;
+        }
+
+        a{
+            color: var(--bg);
+        }
+
+
     </style>
 </head>
 <body>
@@ -48,10 +82,13 @@
     </section>
 
     <script>
+            const tittle = document.createElement('h1')
+            tittle.innerHTML = "Mini-Projetos em JS"
+
             const projetos = [
-                { 'id': '1', 'nome': 'Calculadora de IMC', 'href': '../pages/IMC/index.html' },
-                { 'id': '2', 'nome': 'Lâmpada', 'href': '../pages/lampada/index.html' },
-                { 'id': '3', 'nome': 'Slider', 'href': '../pages/slider/index.html'  }
+                { 'nome': 'Calculadora de IMC', 'href': '../pages/IMC/index.html' },
+                { 'nome': 'Lâmpada', 'href': '../pages/lampada/index.html' },
+                { 'nome': 'Slider', 'href': '../pages/slider/index.html'  },
             ]
 
             const containerPai = document.querySelector('section')
@@ -66,6 +103,7 @@
             }
 
             carregarProjetos(projetos, containerPai);
+            containerPai.insertAdjacentElement('beforebegin', tittle)
 
     </script>
 </body>
