--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
             tittle.innerHTML = "Mini-Projetos em JS"
 
             const projetos = [
-                { 'nome': 'Calculadora de IMC', 'href': '../pages/IMC/index.html' },
-                { 'nome': 'Lâmpada', 'href': '../pages/lampada/index.html' },
-                { 'nome': 'Slider', 'href': '../pages/slider/index.html'  },
+                { 'nome': 'Calculadora de IMC', 'href': 'pages/IMC/index.html' },
+                { 'nome': 'Lâmpada', 'href': 'pages/lampada/index.html' },
+                { 'nome': 'Slider', 'href': 'pages/slider/index.html'  },
             ]
 
             const containerPai = document.querySelector('section')
