--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             width: 300px;
             height: 500px;
             border-radius: 20px;
+            border: 2px solid rgb(235, 235, 235);
         }
 
         h1{
@@ -52,11 +53,13 @@
             font-family: var(--font1);
         }
 
-        button{
+        a{
+            display: inline-block;
+            color: var(--bg);
+            text-align: center;
             width: 150px;
-            height: 100%;
+            height: 50%;
             padding: 10px;
-            border: none;
             border-radius: 10px;
             background-color: var(--button);
             font-weight: 600;
@@ -66,14 +69,9 @@
             background-position: left bottom;
         }
 
-        button:hover{
+        a:hover{
             background-position: right bottom;
         }
-
-        a{
-            color: var(--bg);
-        }
-
 
     </style>
 </head>
@@ -86,9 +84,9 @@
             tittle.innerHTML = "Mini-Projetos em JS"
 
             const projetos = [
-                { 'nome': 'Calculadora de IMC', 'href': '../pages/IMC/index.html' },
-                { 'nome': 'Lâmpada', 'href': '../pages/lampada/index.html' },
-                { 'nome': 'Slider', 'href': '../pages/slider/index.html'  },
+                { 'nome': 'Calculadora de IMC', 'href': 'pages/calucladoraIMC/imc.html' },
+                { 'nome': 'Lâmpada', 'href': 'pages/lampada/lampada.html' },
+                { 'nome': 'Slider', 'href': 'pages/slider/slider.html'  },
             ]
 
             const containerPai = document.querySelector('section')
@@ -97,7 +95,7 @@
                 projetos.forEach(projeto =>{
                     container.innerHTML += `            
                     <div class='item'>
-                         <button> <a href="${projeto.href}"> ${projeto.nome}</a> </button>
+                         <a href="${projeto.href}"> ${projeto.nome}</a>
                     </div>`
                 })
             }
