--- a/pages/slider/slider.html
+++ b/pages/slider/slider.html
@@ -113,6 +113,28 @@
         a:hover{
             background-position: left bottom;
         }
+
+        @media (min-width: 320px) and (max-width: 480px) {
+            section{
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            align-items: center;
+            background-color: var(--section);
+            padding: 10px 30px 20px 30px;
+            width: 300px;
+            height: 300px;
+            border-radius: 20px;
+        }
+
+        .container-slide,
+        .container-item,
+        .item,
+        .item img{
+            width: 80vw;
+            height: 35vh;
+        }
+
     </style>
 </head>
 <body>
