--- a/pages/slider/teste.html
+++ b/pages/slider/teste.html
@@ -38,7 +38,7 @@
             align-items: center;
             background-color: var(--section);
             padding: 10px 30px 20px 30px;
-            width: 600px;
+            width: 500px;
             height: 300px;
             border-radius: 20px;
         }
@@ -124,8 +124,7 @@
             padding: 10px 30px 20px 30px;
             width: 300px;
             height: 300px;
-            border-radius: 20px;
-            }
+            border-radius: 20px;}
 
             .container-slide,
             .container-item,
@@ -134,6 +133,7 @@
                 width: 80vw;
                 height: 35vh;
             }
+
         }
 
 
@@ -141,63 +141,6 @@
     </style>
 </head>
 <body>
-    <section>
-        <div class="container-slide">
-            <div class="action-button" id="previous">&laquo</div>
-            <div class="container-item" id="container-item"></div>
-            <div class="action-button" id="next">&raquo</div>
-        </div>
-    </section>
-    <script>
-            const images = [
-                { 'id': '1', 'url': 'images/pascal.png' },
-                { 'id': '2', 'url': 'images/flin.png' },
-                { 'id': '3', 'url': 'images/rapunzel.png' },
-                { 'id': '4', 'url': 'images/cadeira.png' }
-            ];
-
-            const containerItens = document.querySelector('#container-item');
-
-            const loadImages = (images, container) => {
-                images.forEach(image => {  
-                    container.innerHTML += `
-                        <div class='item'> 
-                            <img src='${image.url}' />
-                        </div>    
-                    `;
-                });
-            };
-
-            loadImages(images, containerItens);
-
-            let items = document.querySelectorAll('.item')
-
-            const previous = () => {
-                containerItens.appendChild(items[0]);
-                items = document.querySelectorAll('.item');
-            }
-
-            const next =() => {
-                const lastItem = items[items.length - 1]
-                containerItens.insertBefore(lastItem, items[0])
-                items = document.querySelectorAll('.item');
-            }
-
-            document.querySelector('#previous').addEventListener('click', previous)
-            document.querySelector('#next').addEventListener('click', next)
-
-            setInterval(previous, 2000)
-
-            const button = () =>{
-                const voltar = document.createElement('a')
-                let section = document.querySelector('section')
-                voltar.href = "../../index.html"
-                voltar.innerHTML = "Voltar"
-                section.insertAdjacentElement('afterend', voltar)
-            }
-
-            button()
-        
-    </script>
+    
 </body>
 </html>
