--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -87,6 +87,7 @@
                 { 'nome': 'Calculadora de IMC', 'href': 'pages/calucladoraIMC/imc.html' },
                 { 'nome': 'Lâmpada', 'href': 'pages/lampada/lampada.html' },
                 { 'nome': 'Slider', 'href': 'pages/slider/slider.html'  },
+                { 'nome': 'Drum Kit', 'href': 'pages/drumKit/drumkit.html'  },
             ]
 
             const containerPai = document.querySelector('section')
