--- a/pages/slider/slider.html
+++ b/pages/slider/slider.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -38,8 +38,8 @@
             align-items: center;
             background-color: var(--section);
             padding: 10px 30px 20px 30px;
-            width: 600px;
-            height: 300px;
+            width: 900px;
+            height: 450px;
             border-radius: 20px;
         }
 
@@ -134,6 +134,14 @@
                 width: 80vw;
                 height: 35vh;
             }
+        }
+
+        @media (min-width: 769px) and (max-width: 1024px) {
+            section{
+            width: 500px;
+            height: 290px;
+            }
+
         }
 
 
