upload de contador

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
                 { 'nome': 'Calculadora de IMC', 'href': 'pages/calucladoraIMC/imc.html' },
                 { 'nome': 'Lâmpada', 'href': 'pages/lampada/lampada.html' },
                 { 'nome': 'Slider', 'href': 'pages/slider/slider.html'  },
+                { 'nome': 'Contador', 'href': 'pages/contador/contador.html'  },
             ]
 
             const containerPai = document.querySelector('section')
