adicionando um novo projeto de quiz

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                 { 'nome': 'Lâmpada', 'href': 'pages/lampada/lampada.html' },
                 { 'nome': 'Slider', 'href': 'pages/slider/slider.html'  },
                 { 'nome': 'Contador', 'href': 'pages/contador/contador.html'  },
+                { 'nome': 'Quiz', 'href': 'pages/quiz/quiz.html'  },
             ]
 
             const containerPai = document.querySelector('section')
